--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRP5nlur9r6eXn9l5byuZ15f7xx0TWxwbvxug&usqp=CAU" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:regular,700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Vladyslav</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
